# fwupd

plugins/: meson.build
plugins/hpi-cfu/: README.md  fu-hpi-cfu-common.c  fu-hpi-cfu-common.h  fu-hpi-cfu-device.c  fu-hpi-cfu-device.h  fu-hpi-cfu-plugin.c  fu-hpi-cfu-plugin.h  fu-hpi-cfu.rs  hpi-cfu.quirk  meson.build
